# lecture-testing-task

05_hw/: CMakeLists.txt  README.md
05_hw/benchmark/: CMakeLists.txt  benchmark.cpp
05_hw/src/: main.c  stack.c  stack.h
05_hw/test/: CMakeLists.txt  stack_fixture.h  test_smoke.cpp  test_stack.cpp
